Fix broken manifest

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,11 +4,11 @@
     "icons": [
         {
             "src": "favicon.png",
-            "sizes": "192.192",
+            "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "logo192.png",
+            "src": "logo144.png",
             "sizes": "144x144",
             "type": "image/png"
         }
